--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@
 #spring.jpa.open-in-view=false
 #spring.datasource.url=jdbc:mysql://localhost:3306/booking-tour-db?createDatabaseIfNotExist=true
 #spring.datasource.username=root
-#spring.datasource.password=
+#spring.datasource.password=123Anhlachien
 
 # C?u hình c?ng mà project ch?y, m?c ??nh là 8080
 server.port=8888
@@ -18,7 +18,7 @@ server.port=8888
 spring.jpa.database=mysql
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/booking_tour
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=123anhlachien
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 ##Khác
